<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/call_services"
        android:textSize="20sp"
        />
    <Button
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/star_service"
        android:textSize="20sp"

       />
    <Button
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:textSize="20sp"
        android:text="@string/regeist_broadcast_inservice"
       />
    <Button
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/tv4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/piture_zoom"
        android:textSize="20sp"
      />
    <Button
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/tv5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/piture_hauhua"
        android:textSize="20sp"
        />

</LinearLayout>